--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -29,14 +29,14 @@ jobs:
         - name: install qt6 
           run: brew install qt6
           
-        #- name: install ffmpeg 
-        #  run: brew install ffmpeg
+        - name: install ffmpeg 
+          run: brew install ffmpeg
 
         - name: Build on MacOS
           run: |
               mkdir build 
               cd build 
-              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DLOCAL_INSTALL=ON 
+              cmake .. -DCMAKE_BUILD_TYPE=Debug -DWITH_FFMPEG=ON -DWITH_LOCAL_FFMPEG=ON -DNO_WARNINGS=ON -DLOCAL_INSTALL=ON 
               cmake --build ./ 
               cmake --build . --target install
 
