remove with python

--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -101,9 +101,11 @@ if(WITH_FFMPEG)
 		
 	if(WITH_LOCAL_FFMEG)
 		message(STATUS "Trying to find a local ffmpeg installation")
+		list(APPEND CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}")
 		find_package(FFMPEG COMPONENTS AVCODEC AVDEVICE AVFILTER AVFORMAT AVRESAMPLE AVUTIL SWRESAMPLE SWSCALE)
 		if(FFMPEG_AVCODEC_FOUND)
 			message(STATUS "Found ffmpeg headers at  ${FFMPEG_INCLUDE_DIRS}")
+			message(STATUS "Found ffmpeg libraries  ${FFMPEG_LIBRARIES}")
 			target_include_directories(VipCore PRIVATE  ${FFMPEG_INCLUDE_DIRS})
 			#target_link_directories(VipCore PRIVATE ${FFMPEG_LIB_DIR})
 			target_link_libraries(VipCore PRIVATE ${FFMPEG_LIBRARIES})
