--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -102,7 +102,7 @@ if(WITH_FFMPEG)
 	if(WITH_LOCAL_FFMEG)
 		message(STATUS "Trying to find a local ffmpeg installation")
 		list(APPEND CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}")
-		find_package(FFMPEG COMPONENTS AVCODEC AVDEVICE AVFILTER AVFORMAT AVRESAMPLE AVUTIL SWRESAMPLE SWSCALE)
+		find_package(FFMPEG COMPONENTS avcodec avdevice avfilter avformat avresample avutil swresample swscale)
 		if(FFMPEG_AVCODEC_FOUND)
 			message(STATUS "Found ffmpeg headers at  ${FFMPEG_INCLUDE_DIRS}")
 			message(STATUS "Found ffmpeg libraries  ${FFMPEG_LIBRARIES}")
