--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -105,10 +105,10 @@ if(WITH_FFMPEG)
 		find_package(FFMPEG COMPONENTS avcodec avdevice avfilter avformat avresample avutil swresample swscale)
 		if(FFMPEG_AVCODEC_FOUND)
 			message(STATUS "Found ffmpeg headers at  ${FFMPEG_INCLUDE_DIRS}")
-			message(STATUS "Found ffmpeg libraries  ${FFMPEG_LIBRARIES}")
+			message(STATUS "Found ffmpeg libraries  ${FFMPEG_SHARED_LIBRARIES}")
 			target_include_directories(VipCore PRIVATE  ${FFMPEG_INCLUDE_DIRS})
 			#target_link_directories(VipCore PRIVATE ${FFMPEG_LIB_DIR})
-			target_link_libraries(VipCore PRIVATE ${FFMPEG_LIBRARIES})
+			target_link_libraries(VipCore PRIVATE $<BUILD_INTERFACE:${FFMPEG_SHARED_LIBRARIES}>)
 		else()
 			message(ERROR "Unable to find ffmpeg installation!")
 		endif()
