--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -109,6 +109,7 @@ if(WITH_FFMPEG)
 			target_include_directories(VipCore PRIVATE  ${FFMPEG_INCLUDE_DIRS})
 			#target_link_directories(VipCore PRIVATE ${FFMPEG_LIB_DIR})
 			target_link_libraries(VipCore PRIVATE $<BUILD_INTERFACE:${FFMPEG_SHARED_LIBRARIES}>)
+			target_link_libraries(VipCore PRIVATE $<BUILD_INTERFACE:${FFMPEG_ADDITIONAL_DEPENDENCIES}>)
 		else()
 			message(ERROR "Unable to find ffmpeg installation!")
 		endif()
