--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -101,7 +101,8 @@ if(WITH_FFMPEG)
 		
 	if(WITH_LOCAL_FFMEG)
 		message(STATUS "Trying to find a local ffmpeg installation")
-		list(APPEND CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}")
+		#list(APPEND CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}")
+		list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_SOURCE_DIR})
 		find_package(FFMPEG COMPONENTS avcodec avdevice avfilter avformat avresample avutil swresample swscale)
 		if(FFMPEG_AVCODEC_FOUND)
 			message(STATUS "Found ffmpeg headers at  ${FFMPEG_INCLUDE_DIRS}")
