--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,6 +34,9 @@ jobs:
           
         - name: install numpy
           run: pip install numpy
+        
+        - name: install ffmpeg
+          run: sudo apt install ffmpeg
           
         - name: install HDF5
           run: sudo apt install libhdf5-serial-dev
@@ -42,7 +45,7 @@ jobs:
           run: |
               mkdir build 
               cd build 
-              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_PYTHON=ON -DWITH_HDF5=ON -DWITH_FFMPEG=ON -DLOCAL_INSTALL=ON 
+              cmake .. -DCMAKE_BUILD_TYPE=Debug -DNO_WARNINGS=ON -DWITH_PYTHON=ON -DWITH_HDF5=ON -DWITH_FFMPEG=ON -DWITH_LOCAL_FFMPEG=ON -DLOCAL_INSTALL=ON 
               make -j8 
               cmake --build . --target install
           shell: bash
