updated CI. Corrected weird bug when mixing Python and some versions of msvc.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -28,6 +28,8 @@ jobs:
 
         - name: Install Qt
           uses: jurplel/install-qt-action@v4
+          with:
+            modules: 'qt5compat'
           
         - name: install gcc 10 
           run: sudo apt update && sudo apt install gcc-10
